# MindScribe

./: .gitignore  MIGRATION_PLAN.md  RAG_MEMORY_ARCHITECTURE.md  README.md  VOICE_SIMPLIFIED.md  WEBLLM_INTEGRATION.md  index.html  package-lock.json  package.json  postcss.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: tauri-windows-build.yml
docs/: ARCHITECTURE_IMPLEMENTATION_IEEE.md  INFERENCE_TURBO_MODE.md  NATIVE_CPU_IMPLEMENTATION_PLAN.md  NATIVE_CPU_INTEGRITY_SETUP.md  PHASE6_MEMORY_INTELLIGENCE_COMPLETION.md  PHASE6_MEMORY_INTELLIGENCE_PLAN.md  PROMPTING_ARCHITECTURE.md  PROMPT_QUALITY_GATES.md  PR_NATIVE_CPU.md  RAG_PHASE1_PRODUCTION_NOTES.md  RAG_PHASE2_COMPLETION.md  RAG_PHASE2_EXECUTION_PLAN.md  RAG_PHASE3_QUALITY_GATES.md  RAG_PHASE4_CI_ENFORCEMENT.md  README.md  _config.yml  index.html
docs/architecture/: IEEE_FIGURE_PACK.md  ieee-01-hero-architecture.mmd  ieee-02-core-ai-pipeline.mmd  (+4 more)
public/: webllm-config.js  webllm-styles.css  webllm-widget.js
scripts/: download-native-gguf-models.js  download-voice-models.js  evaluate-prompt-gate.js  evaluate-rag-gate.js  evaluate-rag.js  fix-piper-wasm.js  prompt-quality-gate.json  rag-eval-report.json  rag-eval-sample.json  rag-quality-gate.json  run-native-cpu.ps1  run-native-cuda.ps1  run-test-report.js  setup-native-cpu.js  slim-tauri-dist.js
src/: App.tsx  index.css  sample-markdown.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: device_store.rs  lib.rs  memory_store.rs  native_inference.rs  voice_native.rs
src/pages/: chat.tsx  (+9 more)
(+51 files in other folders)
