[package]
name = "app"
version = "2.0.0"
description = "MindScribe Desktop"
authors = ["MindScribe Team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
base64 = "0.22"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
# Lower optimization pressure to avoid LLVM OOM on low-memory machines.
opt-level = 0
lto = false
codegen-units = 16
debug = false
incremental = false
panic = "abort"
strip = "debuginfo"
